更新项目依赖和实现财务管理模块
- 更新`pubspec.yaml`文件，升级`shared_preferences`和`font_awesome_flutter`依赖版本
- 新增`flutter_secure_storage`依赖以支持安全存储功能
- 实现财务数据源、仓库和提供者，支持财务记录的增删改查
- 扩展数据库架构以支持财务表
- 优化财务界面的交互和错误处理
- 添加密码管理功能，确保用户数据安全

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   sqflite: ^2.3.0
   sqflite_common_ffi: ^2.3.0
   path: ^1.8.3
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.5.2
   
   # UI组件
   flutter_svg: ^2.0.9
@@ -62,8 +62,9 @@ dependencies:
   
   # 权限管理
   permission_handler: ^11.0.1
-  font_awesome_flutter: ^10.8.0
+  font_awesome_flutter: ^10.6.0
   get_it: ^8.0.3
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
