refactor: 重构任务和备忘录模块，优化代码结构和UI显示
- 新增 `TaskConfig` 类，集中管理任务优先级和分类的配置
- 重构 `TaskCard` 和 `TaskScreen`，使用 `TaskConfig` 统一处理优先级和分类
- 优化备忘录统计模块，提取为独立组件 `MemoStatistics`
- 修复多处未检查 `mounted` 状态的潜在问题
- 删除冗余的测试文件和未使用的代码

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -36,11 +36,13 @@ linter:
     
     # 错误预防规则
     avoid_empty_else: true  # 避免空的else语句
+    # avoid_returning_null_for_future: true  # 避免为Future返回null
     avoid_type_to_string: true  # 避免使用.toString()获取类型名称
     cancel_subscriptions: true  # 确保取消订阅
     close_sinks: true  # 确保关闭sinks
     
     # 文档规则
+    # package_api_docs: false  # 不强制要求包级API文档
     public_member_api_docs: false  # 不强制要求公共成员API文档
 
 # Additional information about this file can be found at
