更新依赖项和新增功能模块
- 更新`pubspec.yaml`中的依赖项版本，包括`uuid`、`permission_handler`等，以确保使用最新的功能和修复。
- 在`pubspec.lock`中添加了新的依赖项，如`charcode`、`csslib`和`share_plus_platform_interface`，以支持新功能。
- 在AndroidManifest.xml中添加了Android 13+所需的媒体权限，确保应用在新版本Android上正常运行。
- 新增`SharePlusNamespace.kt`文件，确保包名目录结构存在。
- 在日常点滴和设置模块中新增数据备份和导入导出功能，提升用户体验。
- 优化了图片存储逻辑，确保图片路径的正确保存和使用。
- 新增多个UI页面，包括数据备份、数据导入导出、日常点滴详情等，丰富应用功能。
- 更新README.md文件，添加新功能说明和使用方法。

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   
   # 工具
   intl: ^0.19.0
-  uuid: ^4.2.1
+  uuid: ^4.5.1
   path_provider: ^2.1.5
   url_launcher: ^6.2.1
   
@@ -61,13 +61,17 @@ dependencies:
   lottie: ^2.7.0
   
   # 权限管理
-  permission_handler: ^11.0.1
+  permission_handler: ^11.4.0
   font_awesome_flutter: ^10.6.0
   get_it: ^8.0.3
   flutter_secure_storage: ^9.2.4
   
   # 实体类相等性比较
   equatable: ^2.0.5
+  flutter_quill: ^11.1.1
+  file_picker: ^9.2.3
+  device_info_plus: ^11.3.3
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
