--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   file_picker: ^9.2.3
   device_info_plus: ^11.3.3
   share_plus: ^10.1.4
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
